--- a/public/main.css
+++ b/public/main.css
@@ -7,6 +7,12 @@ body {
   background: #f2f2f2;
 }
 
+
+*{
+  outline: none !important;
+}
+
+
 .main-container {
   max-width: 400px;
   margin: 0 auto;
