--- a/css/main.scss
+++ b/css/main.scss
@@ -1,153 +1,207 @@
-@import 
-	url("https 
-		&://fonts 
-			&.googleapis 
-				&.com/css2?family=Roboto 
-					&:wght@300;400;500& d isplay=swap"); 
-						body 
-							font-family: "Roboto", sans-serif 
-							background: #f2f2f2 
-* 
-	outline: none !important 
-.main-container 
-	max-width: 400px 
-	margin: 0 auto 
-	background: #fff 
-	padding: 0 20px 20px 20px 
-.section 
-	clear: both 
-	padding: 0px 
-	margin: 0px 
-img 
-	max-width: 100% 
-h5 
-	margin: 10px 0 
-	color: #4c4c4c 
-p 
-	margin: 10px 0 
-	font-size: 14px 
-	color: #555 
-.col 
-	display: block 
-	float: left 
-	margin: 1% 0 1% 1.6% 
-	&:first-child 
-		margin-left: 0 
-.group:before,
-.group:after 
-	content: "" 
-	display: table 
-.group 
-	zoom: 1 
-	&:after 
-		clear: both 
-.span_4_of_4 
-	width: 100% 
-.span_3_of_4 
-	width: 74.6% 
-.span_2_of_4 
-	width: 49.2% 
-.span_1_of_4 
-	width: 23.8% 
-a 
-	&.logo 
-		display: block 
-		text-align: center 
-		margin-bottom: 20px 
-ul 
-	&.nav-ul 
-		& > li 
-			text-align: center 
-			& > a 
-				color: #000 
-				text-decoration: none 
-				font-size: 14px 
-	&.slick-dots 
-		display: none 
-.search-bar 
-	position: relative 
-	button 
-		background: none 
-		border: none 
-		position: absolute 
-		right: 2px 
-		top: 16px 
-		font-size: 12px 
-		color: #999 
-	input 
-		width: 100% 
-		border: none 
-		box-shadow: 0 0 1px 0px #757575 
-		border-radius: 3px 
-		padding: 8px 0 8px 10px 
-		outline: none !important 
-		width: calc(100% - 10px) 
-		margin: 10px 0 20px 0 
-		font-size: 11px 
-.slider-nav 
-	margin-top: 10px 
-.single-slide 
-	padding: 0 5px 
-.main-product-info 
-	h4 
-		font-size: 19px 
-		color: #4c4c4c 
-		margin: 10px 0px 10px 0 
-	p 
-		margin: 5px 0 
-		color: #555 
-.sizes 
-	p 
-		color: #a2a2a2 
-	span 
-		color: #4c4c4c 
-.title-price 
-	margin: 20px 0 0 0px 
-	& > p 
-		color: #4c4c4c 
-.colors 
-	margin: 20px 0 
-	& > button 
-		display: inline-block 
-		width: 25px 
-		height: 25px 
-		border-radius: 3px 
-		border: none 
-		cursor: pointer 
-		margin-right: 8px 
-	&.red-border 
-		& > .red 
-			box-shadow: 0 0 0px 2px black 
-button 
-	&.red 
-		background: #ff2828 
-	&.black 
-		background: #000000 
-	&.grey 
-		background: #555555 
-	&.active 
-		box-shadow: 0 0 0 2px black 
-	&.a2c 
-		width: 100% 
-		background: #06d6a0 
-		padding: 10px 20px 
-		border-radius: 4px 
-		border: none 
-		color: #ffffff 
-		font-size: 17px 
-.description 
-	padding: 10px 0 
-@media 
-	only 
-		screen 
-			and 
-				(max-width 
-					&: 
-						480px) 
-							.col {
-    margin: 1% 0 1% 0% 
-.span_1_of_4,
-  .span_2_of_4,
-  .span_3_of_4,
-  .span_4_of_4 
-	width: 50% 
+$color_1: #4c4c4c;
+$color_2: #555;
+$color_3: #000;
+$color_4: #999;
+$color_5: #a2a2a2;
+$color_6: #ffffff;
+$font_family_1: "Roboto", sans-serif;
+
+@import "https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap";
+/*  SECTIONS  */
+/*  COLUMN SETUP  */
+/*  GROUPING  */
+/*  GRID OF FOUR  */
+/* Styling starts */
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+body {
+	font-family: $font_family_1;
+	background: #f2f2f2;
+}
+* {
+	outline: none !important;
+}
+.main-container {
+	max-width: 400px;
+	margin: 0 auto;
+	background: #fff;
+	padding: 0 20px 20px 20px;
+}
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
+img {
+	max-width: 100%;
+}
+h5 {
+	margin: 10px 0;
+	color: $color_1;
+}
+p {
+	margin: 10px 0;
+	font-size: 14px;
+	color: $color_2;
+}
+.col {
+	display: block;
+	float: left;
+	margin: 1% 0 1% 1.6%;
+	&:first-child {
+		margin-left: 0;
+	}
+}
+.group {
+	&:before {
+		content: "";
+		display: table;
+	}
+	&:after {
+		content: "";
+		display: table;
+		clear: both;
+	}
+	zoom: 1;
+}
+.span_4_of_4 {
+	width: 100%;
+}
+.span_3_of_4 {
+	width: 74.6%;
+}
+.span_2_of_4 {
+	width: 49.2%;
+}
+.span_1_of_4 {
+	width: 23.8%;
+}
+a.logo {
+	display: block;
+	text-align: center;
+	margin-bottom: 20px;
+}
+ul.nav-ul {
+	>li {
+		text-align: center;
+		>a {
+			color: $color_3;
+			text-decoration: none;
+			font-size: 14px;
+		}
+	}
+}
+.search-bar {
+	position: relative;
+	button {
+		background: none;
+		border: none;
+		position: absolute;
+		right: 2px;
+		top: 16px;
+		font-size: 12px;
+		color: $color_4;
+	}
+	input {
+		width: 100%;
+		border: none;
+		box-shadow: 0 0 1px 0px #757575;
+		border-radius: 3px;
+		padding: 8px 0 8px 10px;
+		outline: none !important;
+		width: calc(100% - 10px);
+		margin: 10px 0 20px 0;
+		font-size: 11px;
+	}
+}
+ul.slick-dots {
+	display: none;
+}
+.slider-nav {
+	margin-top: 10px;
+}
+.single-slide {
+	padding: 0 5px;
+}
+.main-product-info {
+	h4 {
+		font-size: 19px;
+		color: $color_1;
+		margin: 10px 0px 10px 0;
+	}
+	p {
+		margin: 5px 0;
+		color: $color_2;
+	}
+}
+.sizes {
+	p {
+		color: $color_5;
+	}
+	span {
+		color: $color_1;
+	}
+}
+.title-price {
+	>p {
+		color: $color_1;
+	}
+	margin: 20px 0 0 0px;
+}
+.colors {
+	margin: 20px 0;
+	>button {
+		display: inline-block;
+		width: 25px;
+		height: 25px;
+		border-radius: 3px;
+		border: none;
+		cursor: pointer;
+		margin-right: 8px;
+	}
+}
+button.red {
+	background: #ff2828;
+}
+button.black {
+	background: #000000;
+}
+button.grey {
+	background: #555555;
+}
+button.active {
+	box-shadow: 0 0 0 2px black;
+}
+button.a2c {
+	width: 100%;
+	background: #06d6a0;
+	padding: 10px 20px;
+	border-radius: 4px;
+	border: none;
+	color: $color_6;
+	font-size: 17px;
+}
+.description {
+	padding: 10px 0;
+}
+.colors.red-border {
+	>.red {
+		box-shadow: 0 0 0px 2px black;
+	}
+}
+@media only screen and (max-width: 480px) {
+	.col {
+		margin: 1% 0 1% 0%;
+	}
+	.span_1_of_4 {
+		width: 50%;
+	}
+	.span_2_of_4 {
+		width: 50%;
+	}
+	.span_3_of_4 {
+		width: 50%;
+	}
+	.span_4_of_4 {
+		width: 50%;
+	}
+}
